--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -5,7 +5,7 @@ uses: google-github-actions/deploy-cloud-functions@v0.1.0
 with:
   name: my-function
   runtime: nodejs10
-  project: ${{ secrets.gcp_project }}
+  project: test
   credentials: ${{ secrets.gcp_credentials }}
 
 on:
@@ -16,9 +16,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        pjts: [aa]
 
     steps:
     - name: Checkout code
@@ -28,11 +25,6 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 20
-    
-    - name: Setup Google Cloud Authentication
-      uses: google-github-actions/auth@v1
-      with:
-        credentials_json: ${{ secrets.GoogleCloud_KEY }}
 
     - name: Deploy to Google Cloud Functions
       run: |
